--- a/src/main/resources/de/maikmerten/bbbdownload/ui/Bundle_de.properties
+++ b/src/main/resources/de/maikmerten/bbbdownload/ui/Bundle_de.properties
@@ -5,7 +5,7 @@
 StartDownload=Bitte lade die Aufzeichnung herunter, dankesch\u00f6n!
 Control=Steuerung
 SelectFile=Datei ausw\u00e4hlen
-DefaultZip=bbb-downloaded-presentation.zip
+DefaultZip=bbb-downloaded-presentation
 OutputZip=Ausgabe-Datei (ZIP)
 ExampleUrl=https://bbb.example.com/playback/presentation/2.0/playback.html?meetingId=be50897f1e04b6a776f9341944723f4e0a1877ef-1582889656605
 ExampleForCorrectUrl=Beispiel f\u00fcr eine URL in korrekter Form:
